SUBDIRS  = common zfs zpool zdb zhack zinject zstreamdump ztest zpios stmfadm configd stmfsvc disk synckey  lunadm sethostid pmm
SUBDIRS += mount_zfs fsck_zfs zvol_id vdev_id arcstat dbufstat iostat zed
SUBDIRS += arc_summary clusterd scripts sas3show mpt3ctl perf_stat iscsitsvc itadm ipmi_monitor drbdmon drbdctl fcboot cm fm
