noinst_LTLIBRARIES = libcfg.la
AM_CPPFLAGS = \
	-I$(top)/base/config \
	-I$(top)/base/rpc \
	-I$(top)/base/common \
	-I$(top)/base/cmt \
	-I$(top)/base/xml \
	-I$(top)/base/db \
	-I$(top)/base/log \
	-I$(top)/base/include \
	-I$(top)/base/ini \
	-I$(top)/base/queue \
	-I$(top)/base/omi \
	-I$(top)/base/config \
	-I$(top)/base \
	-I$(top)/opensrc/sqlite3 \
	-I$(top)/opensrc/json \
	-I$(top)/opensrc/mxml \
	-I$(top)/opensrc/iniparser \
	-I$(top)/main/node
libcfg_la_SOURCES = \
	./cm_cfg_cnm_quota.c \
	./cm_cfg_cnm_user.c \
	./cm_cfg_cnm_nas.c \
	./cm_cfg_cnm_node.c \
	./cm_cfg_cnm_phys.c \
	./cm_cfg_cnm_group.c \
	./cm_cfg_cnm_demo.c \
	./cm_cfg_cnm_nfs.c \
	./cm_cfg_cnm_systime.c \
	./cm_cfg_cnm_clustat.c \
	./cm_cfg_cnm_san.c \
	./cm_cfg_cnm_snapshot_clone.c \
	./cm_cfg_cnm_dirquota.c \
	./cm_cfg_cnm_pmm_lun.c \
	./cm_cfg_cnm_snapshot_backup.c \
	./cm_cfg_cnm_migrate.c \
	./cm_cfg_cnm_task_manager.c \
	./cm_cfg_cnm_topo_power.c \
	./cm_cfg_cnm_threshold.c \
	./cm_cfg_cnm_dnsm.c \
	./cm_cfg_cnm_aggr.c \
	./cm_cfg_cnm_pool.c \
	./cm_cfg_cnm_alarm.c \
	./cm_cfg_cnm_snapshot.c \
	./cm_cfg_cnm_pmm.c \
	./cm_cfg_cnm_cluster.c \
	./cm_cfg_cnm_duallive_nas.c \
	./cm_cfg_cnm_disk.c \
	./cm_cfg_cnm_clusternas.c \
	./cm_cfg_cnm_admin.c \
	./cm_cfg_cnm_pmm_pool.c \
	./cm_cfg_cnm.c 
