lib_LTLIBRARIES = libcmopensrc.la
libcmopensrc_la_SOURCES = \
	./mxml/mxml-entity.c \
	./mxml/mxml-set.c \
	./mxml/mxml-attr.c \
	./mxml/mmd.c \
	./mxml/mxml-get.c \
	./mxml/mxml-private.c \
	./mxml/mxml-string.c \
	./mxml/mxml-file.c \
	./mxml/mxml-search.c \
	./mxml/mxml-index.c \
	./mxml/mxml-node.c \
	./iniparser/dictionary.c \
	./iniparser/iniparser.c \
	./json/printbuf.c \
	./json/json_pointer.c \
	./json/json_tokener.c \
	./json/json_object_iterator.c \
	./json/json_c_version.c \
	./json/linkhash.c \
	./json/json_util.c \
	./json/json_visit.c \
	./json/debug.c \
	./json/json_object.c \
	./json/random_seed.c \
	./json/libjson.c \
	./json/arraylist.c \
	./json/strerror_override.c \
	./sqlite3/sqlite3.c 
libcmopensrc_la_CFLAGS = -std=gnu99 -lpthread -ldl
